--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -24,3 +25,32 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.title {
+  justify-content: center;
+  padding-bottom: 32px;
+}
+
+.information-panel {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.flower-tiles {
+  display: flex;
+  gap: 52px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.flower-tile {
+  max-width: 200px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+
